# qvm-translator

./: .gitignore  README.md  assembler.py  cg_syscalls.map  codegen.py  disassembler.py  il.py  ir.py  opcodes.py  pyproject.toml  register_allocator.py  test.py  translate.py
ghidra/: reload_qvm_code.py
qvm_translator/: __main__.py  assembler.py  cli.py  codegen.py  disassembler.py  g_syscalls.map  ir.py  opcodes.py  syscalls.py  translate.py  ui_syscalls.map
